--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.application.name=5-TFG
 spring.jpa.show-sql=true
 #create-drop
 spring.jpa.hibernate.ddl-auto=create-drop
+#tamaño de las imagenes
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
 
