--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,21 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+	
+	
+		<!-- ZXing Core (lógica de generación/lectura de códigos) -->
+		<dependency>
+		    <groupId>com.google.zxing</groupId>
+		    <artifactId>core</artifactId>
+		    <version>3.5.3</version>
+		</dependency>
+		
+		<!-- ZXing JavaSE (para trabajar con imágenes BufferedImage, PNG, etc.) -->
+		<dependency>
+		    <groupId>com.google.zxing</groupId>
+		    <artifactId>javase</artifactId>
+		    <version>3.5.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
