--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,16 @@ spring.application.name=5-TFG
 spring.jpa.show-sql=true
 #create-drop
 spring.jpa.hibernate.ddl-auto=create-drop
-#tamano de las imagenes
+#tamano de las imagenes JSON subida por el ADMIN
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=50MB
+
+#configuracion del email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=showpasstfg@gmail.com
+spring.mail.password=ttvh gkxj ucga jluu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
