--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.application.name=5-TFG
 spring.jpa.show-sql=true
 #create-drop
 spring.jpa.hibernate.ddl-auto=create-drop
-<<<<<<< Updated upstream
+
 #tamano de las imagenes JSON subida por el ADMIN
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=50MB
-=======
+
 #configuracion del email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -16,4 +16,5 @@ spring.mail.password=ttvh gkxj ucga jluu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
+server.address=0.0.0.0
+server.port=8080
