--- a/appMovilShowPass/app/src/main/AndroidManifest.xml
+++ b/appMovilShowPass/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppMovilShowpass"
-        android:networkSecurityConfig="@xml/network_security_config"
-        >
+        android:networkSecurityConfig="@xml/network_security_config">
+
 
         <activity
             android:name="MainActivity"
