properties modificado pero sigue funcionando igual, anitguo proyecto de kotlin borrado, y carpeta docs con documentacion del proyecto creada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,18 @@ spring.mail.password=ttvh gkxj ucga jluu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#Direccion y puerto #Puerto HTTPS:8443
 server.address=0.0.0.0
-server.port=8080
+server.port=8080 
+
+#protocolo HTTPS,SSL,TSL
+server.ssl.enabled=true
+
+# Ruta y tipo del archivo KeyStore (donde está el certificado)
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-type=PKCS12
+
+# Contraseñas del almacén de claves y la clave privada
+# NOTA: En un entorno real, estos deben ser gestionados por un secreto seguro (Vault, Kubernetes Secrets, etc.)
+server.ssl.key-store-password=mi_contraseña_secreta
+server.ssl.key-alias=alias-del-certificado
