cambios en los eventos y carritos en la app movil con el modelo nuevo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,13 +21,27 @@ server.address=0.0.0.0
 server.port=8080 
 
 #protocolo HTTPS,SSL,TSL
-server.ssl.enabled=true
+server.ssl.enabled=false
 
-# Ruta y tipo del archivo KeyStore (donde est· el certificado)
+# Ruta y tipo del archivo KeyStore (donde est√° el certificado)
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-type=PKCS12
 
-# ContraseÒas del almacÈn de claves y la clave privada
+# Contrase√±as del almac√©n de claves y la clave privada
 # NOTA: En un entorno real, estos deben ser gestionados por un secreto seguro (Vault, Kubernetes Secrets, etc.)
-server.ssl.key-store-password=mi_contraseÒa_secreta
+server.ssl.key-store-password=mi_contrase√±a_secreta
 server.ssl.key-alias=alias-del-certificado
+
+# --- H2 Database Console ---
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Permitir acceso desde navegador (sin restricci√≥n CSRF)
+spring.h2.console.settings.web-allow-others=true
+
+# Configuraci√≥n de la base de datos en memoria
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
