arreglo del diseño de la app movil dejarlo mas estetico y arrglado botones que no se veia bien la descripcion

--- a/appMovilShowPass/gradle/libs.versions.toml
+++ b/appMovilShowPass/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ ui = "1.9.4"
 foundationVersion = "1.9.4"
 firebaseCrashlyticsBuildtools = "3.0.6"
 roomKtx = "2.8.3"
+media3Exoplayer = "1.8.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +43,7 @@ androidx-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
 androidx-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundationVersion" }
 firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomKtx" }
+androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
