Cambios en el front y movil de testeo, conexion compatible de app web con movil localmente pero falla y cambios estéticos en la app movil(iconos, imagenes etc)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,16 +21,16 @@ server.address=0.0.0.0
 server.port=8080 
 
 #protocolo HTTPS,SSL,TSL
-server.ssl.enabled=false
+#server.ssl.enabled=false
 
 # Ruta y tipo del archivo KeyStore (donde está el certificado)
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-type=PKCS12
 
 # Contraseñas del almacén de claves y la clave privada
 # NOTA: En un entorno real, estos deben ser gestionados por un secreto seguro (Vault, Kubernetes Secrets, etc.)
-server.ssl.key-store-password=mi_contraseña_secreta
-server.ssl.key-alias=alias-del-certificado
+#server.ssl.key-store-password=mi_contraseña_secreta
+#server.ssl.key-alias=alias-del-certificado
 
 # --- H2 Database Console ---
 spring.h2.console.enabled=true
