--- a/pom.xml
+++ b/pom.xml
@@ -119,10 +119,11 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
+		<dependency> <!--EMAIL -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+        
 	</dependencies>
 
 	<build>
