--- a/appMovilShowPass/app/src/main/AndroidManifest.xml
+++ b/appMovilShowPass/app/src/main/AndroidManifest.xml
@@ -21,8 +21,20 @@
             android:theme="@style/Theme.AppMovilShowpass">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <!-- Deep link personalizado -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!--HOST-->
+                <data
+                    android:scheme="http"
+                    android:host="localhost"
+                    android:pathPrefix="/tfg/ticket/validarQR" />
             </intent-filter>
         </activity>
     </application>
