--- a/appMovilShowPass/gradle/libs.versions.toml
+++ b/appMovilShowPass/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ foundationVersion = "1.9.4"
 firebaseCrashlyticsBuildtools = "3.0.6"
 roomKtx = "2.8.3"
 media3Exoplayer = "1.8.0"
+foundationLayoutVersion = "1.9.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,6 +45,7 @@ androidx-foundation = { group = "androidx.compose.foundation", name = "foundatio
 firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomKtx" }
 androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
+androidx-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout", version.ref = "foundationLayoutVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
