se ha creado el microservicio de recomendacion
se ha creado un microserviciocon IA en python su funcionalidad es la recomendacion de eventos ya sea por el historial del usuario o por el evento seleccionado para ver su informacion

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ build/
 
 ### uploads ### Carpeta con archivos subidos
 uploads/
+
+# Python venvs
+venv/
+recomendacionServicio/venv/
+
+
+# Python cache
+__pycache__/
+*.pyc
