documentado todo android falta, backend y web

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -39,7 +39,7 @@ spring.h2.console.path=/h2-console
 # Permitir acceso desde navegador (sin restricción CSRF)
 spring.h2.console.settings.web-allow-others=true
 
-# Configuración de la base de datos en memoria
+# Configuracion de la base de datos en memoria
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
