--- a/frontend/appMovilShowPass/gradle/libs.versions.toml
+++ b/frontend/appMovilShowPass/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ firebaseCrashlyticsBuildtools = "3.0.6"
 roomKtx = "2.8.3"
 media3Exoplayer = "1.8.0"
 foundationLayoutVersion = "1.9.4"
+uiVersion = "1.9.5"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,6 +47,7 @@ firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "fireb
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomKtx" }
 androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
 androidx-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout", version.ref = "foundationLayoutVersion" }
+ui = { group = "androidx.compose.ui", name = "ui", version.ref = "uiVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
